--- a/src/qt/res/bitcoin-qt.rc
+++ b/src/qt/res/bitcoin-qt.rc
@@ -1,4 +1,4 @@
-IDI_ICON1 ICON DISCARDABLE "icons/Latium.ico"
+IDI_ICON1 ICON DISCARDABLE "icons/latium.ico"
 
 #include <windows.h>             // needed for VERSIONINFO
 #include "../../clientversion.h" // holds the needed client version information
